--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-xo": "^0.43.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "sass": "^1.58.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.4",
     "vite": "^4.0.0"
